--- a/WASMSerialTerminal/Shared/AutoScrollTextBox.razor
+++ b/WASMSerialTerminal/Shared/AutoScrollTextBox.razor
@@ -28,21 +28,17 @@ The text box will fill all available width, and will fill all available height m
 	public string Class { get; set; } = "";
 
 	/// <summary>
-	/// Appends the string in <paramref name="text"/> to the internal text variable. <br/>
-	/// The changes will not be reflected until the component is re-rendered.
-	/// </summary>
-	public void AppendText(string text) => terminalText += text;
-
-	/// <summary>
 	/// Clears the internal text variable by setting it to an empty string. <br/>
 	/// The changes will not be reflected until the component is re-rendered.
 	/// </summary>
 	public void ClearText() => terminalText = "";
 
 	/// <summary>
-	/// Redraws the component and updates the scroll bars, if autoscroll is enabled.
+	/// Sets the text of the textbox then redraws the component.
+	/// Also updates the scroll bars, if autoscroll is enabled.
 	/// </summary>
-	public void ReRender() {
+	public void SetTextAndRedraw(string text) {
+		terminalText = text;
 		StateHasChanged();
 		if (autoScrollDown)
 			jsRuntime.InvokeVoidAsync("eval", "document.getElementById('serial-text-output').scrollTop = document.getElementById('serial-text-output').scrollHeight");
