--- a/WASMSerialTerminal/Shared/DataInputBox.razor
+++ b/WASMSerialTerminal/Shared/DataInputBox.razor
@@ -16,23 +16,17 @@
 		</div>
 		<RadzenButton Text="Send" ButtonStyle="@ButtonStyle.Info" Click="@SendBytes" Disabled="@Disabled" class="align-self-start ms-2 me-lg-5" style="margin-top: 24px;" />
 	</div>
-	<div class="col-lg-6">
-		<div class="row gx-2 gy-2">
-			<div class="col-xl col-lg-12 col-sm col-12 d-flex flex-column">
-				<label for="send-text-textbox" class="form-label mb-0">Send text</label>
-				<RadzenTextBox id="send-text-textbox" @bind-Value="@currentTextString" size="1" />
-			</div>
-			<div class="col-xl-auto col-lg-4 col-sm-auto col-4 d-flex flex-column" id="encodingSelectorDiv">
-				<label for="encodingSelector" class="form-label mb-0">Encoding</label>
-				<RadzenDropDown Data="@(new string[] { "UTF-8", "ASCII", "UTF-16 (LE)", "UTF-16 (BE)" })" @bind-Value="@currentEncoding" id="encodingSelector" />
-			</div>
-			<div class="col-xl-auto col-lg-4 col-sm-auto col-4 d-flex flex-column" id="lineEndingSelectorDiv">
-				<label for="lineEndingSelector" class="form-label mb-0 text-nowrap">Line ending</label>
-				<RadzenDropDown Data="@(new string[] { "None", "\\r", "\\n", "\\r\\n" })" @bind-Value="@currentLineEnding" id="lineEndingSelector" />
-			</div>
-			<div class="col-xl-auto col-lg-4 col-sm-auto col-4 d-flex flex-column justify-content-end">
-				<RadzenButton Text="Send" ButtonStyle="@ButtonStyle.Info" Click="@SendText" Disabled="@Disabled" />
-			</div>
+	<div class="col-lg-6 d-flex">
+		<div class="flex-grow-1 d-flex flex-column justify-content-end">
+			<label for="send-text-textbox" class="form-label mb-0">Send text</label>
+			<RadzenTextBox id="send-text-textbox" @bind-Value="@currentTextString" size="1" />
+		</div>
+		<div class="mx-2 d-flex flex-column justify-content-end">
+			<label for="lineEndingSelector" class="form-label mb-0 text-nowrap">Line ending</label>
+			<RadzenDropDown Data="@(new string[] { "None", "\\r", "\\n", "\\r\\n" })" @bind-Value="@currentLineEnding" id="lineEndingSelector" Style="width: 100px;" />
+		</div>
+		<div class="d-flex flex-column justify-content-end">
+			<RadzenButton Text="Send" ButtonStyle="@ButtonStyle.Info" Click="@SendText" Disabled="@Disabled" />
 		</div>
 	</div>
 </div>
@@ -40,7 +34,6 @@
 @code {
 	private string currentBytesString = "";
 	private string currentTextString = "";
-	private string currentEncoding = "UTF-8";
 	private string currentLineEnding = "None";
 
 	// true if the user entered an incorrect byte, then this will show the error message label
@@ -59,6 +52,8 @@
 	public EventCallback<byte[]> OnDataToBeSent { get; set; }
 	[Parameter]
 	public bool Disabled { get; set; }
+	[Parameter]
+	public Encoding TextEncoding { get; set; } = Encoding.UTF8;
 
 	private async Task SendBytes() {
 		List<byte> bytes = new();
@@ -76,19 +71,13 @@
 	}
 
 	private async Task SendText() {
-		Encoding encoding = currentEncoding switch {
-			"UTF-8" => Encoding.UTF8,
-			"ASCII" => Encoding.ASCII,
-			"UTF-16 (LE)" => Encoding.Unicode,
-			_ => Encoding.BigEndianUnicode,
-		};
 		string lineEnding = currentLineEnding switch {
 			"\\r" => "\r",
 			"\\n" => "\n",
 			"\\r\\n" => "\r\n",
 			_ => ""
 		};
-		byte[] bytes = encoding.GetBytes(currentTextString + lineEnding);
+		byte[] bytes = TextEncoding.GetBytes(currentTextString + lineEnding);
 		await OnDataToBeSent.InvokeAsync(bytes);
 	}
 }
