--- a/WASMSerialTerminal/Index.razor
+++ b/WASMSerialTerminal/Index.razor
@@ -14,15 +14,15 @@
 	<hr class="mb-4" />
 
 	<div class="row gy-5">
-		<div class="col-lg-6 d-flex flex-column align-items-start" style="min-height: 400px;">
+		<div class="col-lg-6 d-flex flex-column align-items-start">
 			<RadzenButton Text="Connect to port" ButtonStyle="@ButtonStyle.Success" Click="@OnConnectButtonClick" Visible="@(!serialService.PortOpen)" class="mb-1" />
 			<RadzenButton Text="Close port" ButtonStyle="@ButtonStyle.Danger" Click="@OnDisconnectButtonClick" Visible="@serialService.PortOpen" class="mb-1" />
-			<AutoScrollTextBox @ref="@autoScrollTextBox" Class="w-100 flex-grow-1" />
+			<AutoScrollTextBox Style="height: 425px; width: 100%;" @ref="@autoScrollTextBox" OnClearDataButtonClicked="@OnClearDataButtonClicked" />
 		</div>
 		<div class="col-lg-6">
 			<div class="mb-1">
 				<RadzenButton ButtonStyle="@ButtonStyle.Primary" Click="@OnRefreshGridButtonClick" Icon="autorenew" />
-				<p class="d-inline">Data breakdown (not realtime):</p>
+				<p class="d-inline text-nowrap">Data breakdown (not realtime):</p>
 			</div>
 			<RadzenDataGrid TItem="@SerialByte" Data="@serialData" Style="height: 400px;" AllowColumnReorder="true" AllowColumnResize="true"
 							@ref="@grid" AllowPaging="true" ShowPagingSummary="true" PageSizeOptions="@(new int[] {10, 20, 30, 40, 50})">
@@ -107,7 +107,12 @@
 		await grid!.LastPage();
 	}
 
-	// Handles theb utton clicks when sending text or byte data
+	private async Task OnClearDataButtonClicked() {
+		serialData.Clear();
+		await grid!.Reload();
+	}
+
+	// Handles the button clicks when sending text or byte data
 	private async Task OnSendDataButtonClick(byte[] data) {
 		try {
 			await serialService.WriteData(data);
