--- a/WASMSerialTerminal/Shared/MainLayout.razor
+++ b/WASMSerialTerminal/Shared/MainLayout.razor
@@ -1,9 +1,5 @@
 ﻿@inherits LayoutComponentBase
 
-<div class="page">
-	<main>
-		<article class="content px-4">
-			@Body
-		</article>
-	</main>
-</div>
+<main class="content px-4">
+	@Body
+</main>
